--- a/base_tier_validation/views/tier_definition_view.xml
+++ b/base_tier_validation/views/tier_definition_view.xml
@@ -3,10 +3,10 @@
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 <odoo>
     <record id="tier_definition_view_tree" model="ir.ui.view">
-        <field name="name">tier.definition.tree</field>
+        <field name="name">tier.definition.list</field>
         <field name="model">tier.definition</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="sequence" widget="handle" />
                 <field name="model_id" />
                 <field name="name" />
@@ -23,7 +23,7 @@
                     optional="hide"
                 />
                 <field name="active" />
-            </tree>
+            </list>
         </field>
     </record>
     <record id="tier_definition_view_form" model="ir.ui.view">
@@ -156,7 +156,7 @@
         <field name="name">Tier Definition</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">tier.definition</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="context">{'search_default_all': 1}</field>
     </record>
     <menuitem
