--- a/base_tier_validation/views/tier_validation_exception_view.xml
+++ b/base_tier_validation/views/tier_validation_exception_view.xml
@@ -3,10 +3,10 @@
      License AGPL-3.0 or later (https://www.gnu.org/licenses/agpl). -->
 <odoo>
     <record id="tier_validation_exception_tree" model="ir.ui.view">
-        <field name="name">tier.validation.exception.tree</field>
+        <field name="name">tier.validation.exception.list</field>
         <field name="model">tier.validation.exception</field>
         <field name="arch" type="xml">
-            <tree>
+            <list>
                 <field name="name" />
                 <field name="model_id" />
                 <field name="field_ids" widget="many2many_tags" optional="show" />
@@ -14,7 +14,7 @@
                 <field name="allowed_to_write_under_validation" />
                 <field name="allowed_to_write_after_validation" />
                 <field name="group_ids" widget="many2many_tags" />
-            </tree>
+            </list>
         </field>
     </record>
 
@@ -101,7 +101,7 @@
         <field name="name">Tier Validation Exception</field>
         <field name="type">ir.actions.act_window</field>
         <field name="res_model">tier.validation.exception</field>
-        <field name="view_mode">tree,form</field>
+        <field name="view_mode">list,form</field>
         <field name="help" type="html">
             <p
                 class="o_view_nocontent_smiling_face"
