--- a/base_tier_validation/templates/tier_validation_templates.xml
+++ b/base_tier_validation/templates/tier_validation_templates.xml
@@ -23,10 +23,9 @@
             <field name="validated" invisible="1" />
             <field name="rejected" invisible="1" />
             <div
-                class="alert alert-warning"
+                class="alert alert-warning mb-0"
                 role="alert"
                 t-attf-invisible="validated or hide_reviews or rejected or not review_ids"
-                style="margin-bottom:0px;"
             >
                 <p>
                 <i class="fa fa-lg fa-info-circle" />
@@ -53,10 +52,9 @@
             </p>
             </div>
             <div
-                class="alert alert-success"
+                class="alert alert-success mb-0"
                 role="alert"
                 t-attf-invisible="validated != True or hide_reviews or not review_ids"
-                style="margin-bottom:0px;"
             >
                 <p>
                 <i class="fa fa-lg fa-thumbs-up" />
@@ -66,10 +64,9 @@
             </p>
             </div>
             <div
-                class="alert alert-danger"
+                class="alert alert-danger mb-0"
                 role="alert"
                 t-attf-invisible="not rejected or hide_reviews or not review_ids"
-                style="margin-bottom:0px;"
             >
                 <p>
                 <i class="fa fa-lg fa-thumbs-down" />
@@ -85,7 +82,7 @@
             name="review_ids"
             widget="tier_validation"
             invisible="not review_ids"
-            style="width:100%%; margin-top: 10px;"
+            style="width:100%; margin-top: 10px;"
         >
             <list>
                 <field name="id" />
